syntax = "proto3";

package users;

option go_package = "./pkg/userspb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetCurrentUser(GetCurrentUserRequest) returns (GetUserResponse);
  rpc DeleteCurrentUser(DeleteCurrentUserRequest) returns (EmptyResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetCurrentUserRequest {
  string jwt = 1;
}

message DeleteCurrentUserRequest {
  string jwt = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message EmptyResponse {}